feat(PLATFORM-587): Release on tagged build  (#1)
* feat(PLATFORM-587): Add version to operator

Signed-off-by: Phil Stevenson <phil.stevenson@adarga.ai>

* feat(PLATFORM-587): Release on tagged build

Signed-off-by: Phil Stevenson <phil.stevenson@adarga.ai>

* fix(PLATFORM-587): circleci build

Signed-off-by: Phil Stevenson <phil.stevenson@adarga.ai>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           command: make test
       - snyk/scan:
           project: '${CIRCLE_PROJECT_REPONAME}'
-          additional-arguments: "--remote-repo-url=https://github.com/Adarga-Ltd/kafka-topic-operator"
+          additional-arguments: "--remote-repo-url=https://github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME"
           fail-on-issues: true
           monitor-on-build: true
           severity-threshold: high
@@ -29,8 +29,7 @@ jobs:
     executor: default
     steps:
       - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
+      - setup_remote_docker
       - run:
           name: Install AWS CLI
           command: curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip && ./aws/install -i ~/.local/aws-cli -b ~/.local/bin
@@ -39,7 +38,7 @@ jobs:
           command: aws ecr get-login-password | docker login --username AWS --password-stdin $AWS_ECR_ACCOUNT_URL
       - run:
           name: Docker Build commit tag
-          command: IMG=$AWS_ECR_ACCOUNT_URL/adarga/$CIRCLE_PROJECT_REPONAME:$CIRCLE_SHA1 make docker-build
+          command: BUILD_VERSION=${CIRCLE_TAG:=$CIRCLE_BRANCH+$CIRCLE_SHA1} IMG=$AWS_ECR_ACCOUNT_URL/adarga/$CIRCLE_PROJECT_REPONAME:$CIRCLE_SHA1 make docker-build
       - snyk/scan:
           project: '${CIRCLE_PROJECT_REPONAME}'
           docker-image-name: '$AWS_ECR_ACCOUNT_URL/adarga/$CIRCLE_PROJECT_REPONAME:$CIRCLE_SHA1'
@@ -56,8 +55,7 @@ jobs:
     executor: default
     steps:
       - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
+      - setup_remote_docker
       - run:
           name: Install AWS CLI
           command: curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip && ./aws/install -i ~/.local/aws-cli -b ~/.local/bin
@@ -68,11 +66,11 @@ jobs:
           name: Docker Pull commit tag
           command: docker pull $AWS_ECR_ACCOUNT_URL/adarga/$CIRCLE_PROJECT_REPONAME:$CIRCLE_SHA1
       - run:
-          name: Docker Tag latest
-          command: docker tag $AWS_ECR_ACCOUNT_URL/adarga/$CIRCLE_PROJECT_REPONAME:$CIRCLE_SHA1 $AWS_ECR_ACCOUNT_URL/adarga/$CIRCLE_PROJECT_REPONAME:latest
+          name: Docker Tag release
+          command: docker tag $AWS_ECR_ACCOUNT_URL/adarga/$CIRCLE_PROJECT_REPONAME:$CIRCLE_SHA1 $AWS_ECR_ACCOUNT_URL/adarga/$CIRCLE_PROJECT_REPONAME:${CIRCLE_TAG:=$CIRCLE_BRANCH}
       - run:
-          name: Docker Push latest
-          command: docker push $AWS_ECR_ACCOUNT_URL/adarga/$CIRCLE_PROJECT_REPONAME:latest
+          name: Docker Push release
+          command: docker push $AWS_ECR_ACCOUNT_URL/adarga/$CIRCLE_PROJECT_REPONAME:$CIRCLE_TAG
 
 workflows:
   version: 2
@@ -91,6 +89,7 @@ workflows:
           requires:
             - build
           filters:
+            tags:
+              only: /^v.*/
             branches:
-              only:
-                - main
+              only: main
