--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -34,6 +34,9 @@ patchesStrategicMerge:
 # through a ComponentConfig type
 # - manager_config_patch.yaml
 
+# Mount the controller config file for loading kafka cluster connections configurations
+- manager_kafka_connections_config_patch.yaml
+
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix including the one in
 # crd/kustomization.yaml
 - manager_webhook_patch.yaml
